File service (#13)
* Add aws, s3 packege

* Add CreateFileCommand

* Add POST /files
