# file/docs/swagger.json
@@ -4,7 +4,80 @@
         "contact": {},
         "license": {}
     },
-    "paths": {},
+    "paths": {
+        "/files": {
+            "post": {
+                "description": "crate file",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "accountId for file owner",
+                        "name": "accountId",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "file usage",
+                        "name": "usage",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "file for upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.FileModel"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "model.FileModel": {
+            "type": "object",
+            "properties": {
+                "accountId": {
+                    "type": "string",
+                    "example": "accountId"
+                },
+                "createdAt": {
+                    "type": "string",
+                    "example": "createdAt"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "fileId"
+                },
+                "imageUrl": {
+                    "type": "string",
+                    "example": "profile.image.com"
+                },
+                "usage": {
+                    "type": "string",
+                    "example": "profile"
+                }
+            }
+        }
+    },
     "securityDefinitions": {
         "AccessToken": {
             "type": "apiKey",
